apply filtete to array and change UI based on state value

--- a/src/components/Expenses/Expenses.css
+++ b/src/components/Expenses/Expenses.css
@@ -5,3 +5,12 @@
     width: 50rem;
     max-width: 95%;
 }
+
+.textStyleP{
+  text-align: center;
+  color: white;
+  font-size: 30px;
+  padding: 10px;
+  display: inline-block;
+  margin: 0 20%;
+}
