--- a/src/components/NewExpense/ExpenseForm.css
+++ b/src/components/NewExpense/ExpenseForm.css
@@ -3,7 +3,6 @@
     flex-wrap: wrap;
     gap: 1rem;
     margin-bottom: 1rem;
-    text-align: left;
   }
   
   .new-expense__control label {
@@ -22,6 +21,6 @@
   }
   
   .new-expense__actions {
-    text-align: right;
-
+    text-align: left;
+    margin-left: 154px;
   }
